--- a/app/views/borrowBook.html
+++ b/app/views/borrowBook.html
@@ -1,4 +1,4 @@
-<h1 class="page-header">添加书籍</h1>
+<h1 class="page-header">借阅书籍</h1>
 <div class="row">
     <form class="form-horizontal" role="form" name="addBookForm" ng-submit="addBook(addBookForm.$valid,$event)">
         <div class="form-group">
@@ -7,14 +7,6 @@
             </label>
             <div class="col-md-5">
                 <input type="text" class="form-control" placeholder="请输入书名……" ng-model="bookName" id="bookName" name="bookName" required autofocus="">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-md-2 control-label">
-                ISBN：
-            </label>
-            <div class="col-md-5">
-                <input type="text" class="form-control" placeholder="请输入ISBN……" ng-model="ISBN" id="ISBN" name="ISBN" required autofocus="">
             </div>
         </div>
         <div class="form-group">
@@ -57,14 +49,6 @@
             </label>
             <div class="col-md-5">
                 <input type="text" class="form-control" placeholder="请输入出版日期……" ng-model="pubDate" id="pubDate" name="pubDate">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-md-2 control-label">
-                入库日期：
-            </label>
-            <div class="col-md-5">
-                <input type="text" class="form-control" placeholder="请输入出版日期……" ng-model="addDate" id="addDate" name="addDate">
             </div>
         </div>
         <div class="form-group">
